UPDATE: List has been converted from a Block into a Utility. UPDATE: rhythm() has been swapped for spacing() in _file-config, _breathe, _container-config. UPDATE: Redundant before element from form-file. BUGFIX: Fixed an incorrectly named config variable in select.scss and select-config.scss. BUGFIX: Fixed default error style selector pattern on form-text and form-textarea. BUGFIX: Added missing !default flag to toggle-config UPDATE: font-size utility classes now use font-size() to make sure they compile to rem values. UPDATE: Renamed text-transform utilities and border-radius utility class names to be consistent with the property they're setting.

--- a/src/FoundryCSS/ui/forms/inputs/File/_file.scss
+++ b/src/FoundryCSS/ui/forms/inputs/File/_file.scss
@@ -22,16 +22,6 @@
             box-shadow: 0 0 15px 0 rgba(color('alpha'), 0.25), $form-file-dropzone-hover-shadow;
         }
     }
-
-    &:before {
-        content: '';
-        display: block;
-        background: $form-file-dropzone-background;
-        border: $form-file-dropzone-border;
-        border-radius: $form-file-dropzone-border-radius;
-        padding: $form-file-dropzone-padding;
-        text-align: center;
-    }
 }
 
 .form-file__dropzone {
