--- a/src/FoundryCSS/ui/layout/Container/_container-config.scss
+++ b/src/FoundryCSS/ui/layout/Container/_container-config.scss
@@ -15,4 +15,4 @@ $container-sizes: (
 
 /* Padding */
 
-$container-padding: rhythm() !default;
+$container-padding: spacing(4) !default;
